// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"development" environment "noStyling" variation 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/syntax-dynamic-import",
    Array [
      "@babel/transform-runtime",
      Object {
        "corejs": 3,
      },
    ],
    "react-hot-loader/babel",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "defaults",
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"development" environment Default config 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/syntax-dynamic-import",
    Array [
      "@babel/transform-runtime",
      Object {
        "corejs": 3,
      },
    ],
    Array [
      "react-css-modules",
      Object {
        "filetypes": Object {
          ".scss": Object {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": "[path][name]___[local]___[hash:base64:6]",
      },
    ],
    "react-hot-loader/babel",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "defaults",
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment "noStyling" variation 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/syntax-dynamic-import",
    Array [
      "@babel/transform-runtime",
      Object {
        "corejs": 3,
      },
    ],
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "defaults",
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment Default config 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/syntax-dynamic-import",
    Array [
      "@babel/transform-runtime",
      Object {
        "corejs": 3,
      },
    ],
    Array [
      "react-css-modules",
      Object {
        "filetypes": Object {
          ".scss": Object {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": "[hash:base64:6]",
      },
    ],
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "defaults",
      },
    ],
    "@babel/react",
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`Module exports 1`] = `[Function]`;
